// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Library> 1`] = `
<DocumentFragment>
  <div
    class="_Library-root-10"
  >
    <div
      class="_Library-drawer-9"
    >
      <div
        class="MuiDrawer-root-83 MuiDrawer-docked-84"
      >
        <div
          class="MuiPaper-root-95 MuiPaper-elevation0-97 MuiDrawer-paper-85 _Library-drawerPaper-3 MuiDrawer-paperAnchorLeft-86 MuiDrawer-paperAnchorDockedLeft-90"
        >
          <div
            class="_Library-toolbar-6"
          />
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <li
              class="MuiListSubheader-root-122 MuiListSubheader-sticky-127 MuiListSubheader-gutters-125"
            >
              Tags
            </li>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-0
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-1
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-2
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="_Library-content-7"
    >
      <div
        class="MuiFormControl-root-11 MuiFormControl-marginNormal-12 MuiFormControl-fullWidth-14"
      >
        <label
          class="MuiFormLabel-root-26 MuiInputLabel-root-15 MuiInputLabel-formControl-20 MuiInputLabel-animated-23 MuiInputLabel-shrink-22 MuiInputLabel-outlined-25"
          data-shrink="true"
          for="search"
        >
          Search
        </label>
        <div
          class="MuiInputBase-root-46 MuiOutlinedInput-root-33 MuiInputBase-fullWidth-55 MuiInputBase-formControl-47 MuiInputBase-adornedStart-50 MuiOutlinedInput-adornedStart-36 MuiInputBase-adornedEnd-51 MuiOutlinedInput-adornedEnd-37"
        >
          <fieldset
            aria-hidden="true"
            class="MuiPrivateNotchedOutline-root-63 MuiOutlinedInput-notchedOutline-40"
            style="padding-left: 8px;"
          >
            <legend
              class="MuiPrivateNotchedOutline-legend-64"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="MuiInputAdornment-root-65 MuiInputAdornment-positionStart-67"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-70"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input-56 MuiOutlinedInput-input-41 MuiInputBase-inputAdornedStart-61 MuiOutlinedInput-inputAdornedStart-44 MuiInputBase-inputAdornedEnd-62 MuiOutlinedInput-inputAdornedEnd-45"
            id="search"
            placeholder="A Tale of Two Cities"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="_Library-infiniteScroll-2"
      >
        <div>
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <a
              class="_Library-entity-8"
              href="/read/1556915133441"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-70 MuiSvgIcon-colorPrimary-71"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                    A Tale of Two Cities
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123k words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0 #tag-1
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
            <a
              class="_Library-entity-8"
              href="/read/1556915133440"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Pride and Prejudice
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123 words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
            <a
              class="_Library-entity-8"
              href="/read/1556915133442"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Moby Dick; Or, The Whale
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    1.23m words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-2
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Library> 2`] = `
<DocumentFragment>
  <div
    class="_Library-root-10"
  >
    <div
      class="_Library-drawer-9"
    >
      <div
        class="MuiDrawer-root-83 MuiDrawer-docked-84"
      >
        <div
          class="MuiPaper-root-95 MuiPaper-elevation0-97 MuiDrawer-paper-85 _Library-drawerPaper-3 MuiDrawer-paperAnchorLeft-86 MuiDrawer-paperAnchorDockedLeft-90"
        >
          <div
            class="_Library-toolbar-6"
          />
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <li
              class="MuiListSubheader-root-122 MuiListSubheader-sticky-127 MuiListSubheader-gutters-125"
            >
              Active Filters
            </li>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137 MuiListItem-selected-139"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143 _Library-selectedTagAvatar-1"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-0
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
          </ul>
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <li
              class="MuiListSubheader-root-122 MuiListSubheader-sticky-127 MuiListSubheader-gutters-125"
            >
              Tags
            </li>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-1
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="_Library-content-7"
    >
      <div
        class="MuiFormControl-root-11 MuiFormControl-marginNormal-12 MuiFormControl-fullWidth-14"
      >
        <label
          class="MuiFormLabel-root-26 MuiInputLabel-root-15 MuiInputLabel-formControl-20 MuiInputLabel-animated-23 MuiInputLabel-shrink-22 MuiInputLabel-outlined-25"
          data-shrink="true"
          for="search"
        >
          Search
        </label>
        <div
          class="MuiInputBase-root-46 MuiOutlinedInput-root-33 MuiInputBase-fullWidth-55 MuiInputBase-formControl-47 MuiInputBase-adornedStart-50 MuiOutlinedInput-adornedStart-36 MuiInputBase-adornedEnd-51 MuiOutlinedInput-adornedEnd-37"
        >
          <fieldset
            aria-hidden="true"
            class="MuiPrivateNotchedOutline-root-63 MuiOutlinedInput-notchedOutline-40"
            style="padding-left: 8px;"
          >
            <legend
              class="MuiPrivateNotchedOutline-legend-64"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="MuiInputAdornment-root-65 MuiInputAdornment-positionStart-67"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-70"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input-56 MuiOutlinedInput-input-41 MuiInputBase-inputAdornedStart-61 MuiOutlinedInput-inputAdornedStart-44 MuiInputBase-inputAdornedEnd-62 MuiOutlinedInput-inputAdornedEnd-45"
            id="search"
            placeholder="A Tale of Two Cities"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="_Library-infiniteScroll-2"
      >
        <div>
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <a
              class="_Library-entity-8"
              href="/read/1556915133441"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-70 MuiSvgIcon-colorPrimary-71"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                    A Tale of Two Cities
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123k words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0 #tag-1
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
            <a
              class="_Library-entity-8"
              href="/read/1556915133440"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Pride and Prejudice
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123 words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Library> 3`] = `
<DocumentFragment>
  <div
    class="_Library-root-10"
  >
    <div
      class="_Library-drawer-9"
    >
      <div
        class="MuiDrawer-root-83 MuiDrawer-docked-84"
      >
        <div
          class="MuiPaper-root-95 MuiPaper-elevation0-97 MuiDrawer-paper-85 _Library-drawerPaper-3 MuiDrawer-paperAnchorLeft-86 MuiDrawer-paperAnchorDockedLeft-90"
        >
          <div
            class="_Library-toolbar-6"
          />
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <li
              class="MuiListSubheader-root-122 MuiListSubheader-sticky-127 MuiListSubheader-gutters-125"
            >
              Active Filters
            </li>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137 MuiListItem-selected-139"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143 _Library-selectedTagAvatar-1"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-0
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137 MuiListItem-selected-139"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143 _Library-selectedTagAvatar-1"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-1
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="_Library-content-7"
    >
      <div
        class="MuiFormControl-root-11 MuiFormControl-marginNormal-12 MuiFormControl-fullWidth-14"
      >
        <label
          class="MuiFormLabel-root-26 MuiInputLabel-root-15 MuiInputLabel-formControl-20 MuiInputLabel-animated-23 MuiInputLabel-shrink-22 MuiInputLabel-outlined-25"
          data-shrink="true"
          for="search"
        >
          Search
        </label>
        <div
          class="MuiInputBase-root-46 MuiOutlinedInput-root-33 MuiInputBase-fullWidth-55 MuiInputBase-formControl-47 MuiInputBase-adornedStart-50 MuiOutlinedInput-adornedStart-36 MuiInputBase-adornedEnd-51 MuiOutlinedInput-adornedEnd-37"
        >
          <fieldset
            aria-hidden="true"
            class="MuiPrivateNotchedOutline-root-63 MuiOutlinedInput-notchedOutline-40"
            style="padding-left: 8px;"
          >
            <legend
              class="MuiPrivateNotchedOutline-legend-64"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="MuiInputAdornment-root-65 MuiInputAdornment-positionStart-67"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-70"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input-56 MuiOutlinedInput-input-41 MuiInputBase-inputAdornedStart-61 MuiOutlinedInput-inputAdornedStart-44 MuiInputBase-inputAdornedEnd-62 MuiOutlinedInput-inputAdornedEnd-45"
            id="search"
            placeholder="A Tale of Two Cities"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="_Library-infiniteScroll-2"
      >
        <div>
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <a
              class="_Library-entity-8"
              href="/read/1556915133441"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-70 MuiSvgIcon-colorPrimary-71"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                    A Tale of Two Cities
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123k words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0 #tag-1
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
            <a
              class="_Library-entity-8"
              href="/read/1556915133440"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Pride and Prejudice
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123 words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Library> 4`] = `
<DocumentFragment>
  <div
    class="_Library-root-10"
  >
    <div
      class="_Library-drawer-9"
    >
      <div
        class="MuiDrawer-root-83 MuiDrawer-docked-84"
      >
        <div
          class="MuiPaper-root-95 MuiPaper-elevation0-97 MuiDrawer-paper-85 _Library-drawerPaper-3 MuiDrawer-paperAnchorLeft-86 MuiDrawer-paperAnchorDockedLeft-90"
        >
          <div
            class="_Library-toolbar-6"
          />
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <li
              class="MuiListSubheader-root-122 MuiListSubheader-sticky-127 MuiListSubheader-gutters-125"
            >
              Tags
            </li>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-0
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-1
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-2
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="_Library-content-7"
    >
      <div
        class="MuiFormControl-root-11 MuiFormControl-marginNormal-12 MuiFormControl-fullWidth-14"
      >
        <label
          class="MuiFormLabel-root-26 MuiInputLabel-root-15 MuiInputLabel-formControl-20 MuiInputLabel-animated-23 MuiInputLabel-shrink-22 MuiInputLabel-outlined-25"
          data-shrink="true"
          for="search"
        >
          Search
        </label>
        <div
          class="MuiInputBase-root-46 MuiOutlinedInput-root-33 MuiInputBase-fullWidth-55 MuiInputBase-formControl-47 MuiInputBase-adornedStart-50 MuiOutlinedInput-adornedStart-36 MuiInputBase-adornedEnd-51 MuiOutlinedInput-adornedEnd-37"
        >
          <fieldset
            aria-hidden="true"
            class="MuiPrivateNotchedOutline-root-63 MuiOutlinedInput-notchedOutline-40"
            style="padding-left: 8px;"
          >
            <legend
              class="MuiPrivateNotchedOutline-legend-64"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="MuiInputAdornment-root-65 MuiInputAdornment-positionStart-67"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-70"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input-56 MuiOutlinedInput-input-41 MuiInputBase-inputAdornedStart-61 MuiOutlinedInput-inputAdornedStart-44 MuiInputBase-inputAdornedEnd-62 MuiOutlinedInput-inputAdornedEnd-45"
            id="search"
            placeholder="A Tale of Two Cities"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="_Library-infiniteScroll-2"
      >
        <div>
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <a
              class="_Library-entity-8"
              href="/read/1556915133441"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-70 MuiSvgIcon-colorPrimary-71"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                    A Tale of Two Cities
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123k words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0 #tag-1
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
            <a
              class="_Library-entity-8"
              href="/read/1556915133440"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Pride and Prejudice
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    123 words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-0
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
            <a
              class="_Library-entity-8"
              href="/read/1556915133442"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Moby Dick; Or, The Whale
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    1.23m words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-2
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Library> 5`] = `
<DocumentFragment>
  <div
    class="_Library-root-10"
  >
    <div
      class="_Library-drawer-9"
    >
      <div
        class="MuiDrawer-root-83 MuiDrawer-docked-84"
      >
        <div
          class="MuiPaper-root-95 MuiPaper-elevation0-97 MuiDrawer-paper-85 _Library-drawerPaper-3 MuiDrawer-paperAnchorLeft-86 MuiDrawer-paperAnchorDockedLeft-90"
        >
          <div
            class="_Library-toolbar-6"
          />
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <li
              class="MuiListSubheader-root-122 MuiListSubheader-sticky-127 MuiListSubheader-gutters-125"
            >
              Tags
            </li>
            <div
              class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAvatar-root-146 MuiAvatar-colorDefault-147 MuiListItemAvatar-root-143"
              >
                #
              </div>
              <div
                class="MuiListItemText-root-149 MuiListItemText-dense-151"
              >
                <span
                  class="MuiTypography-root-155 MuiTypography-subheading-162 MuiListItemText-primary-152 MuiListItemText-textDense-154"
                >
                  tag-2
                </span>
              </div>
              <span
                class="MuiTouchRipple-root-193"
              />
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="_Library-content-7"
    >
      <div
        class="MuiFormControl-root-11 MuiFormControl-marginNormal-12 MuiFormControl-fullWidth-14"
      >
        <label
          class="MuiFormLabel-root-26 MuiFormLabel-filled-30 MuiInputLabel-root-15 MuiInputLabel-formControl-20 MuiInputLabel-animated-23 MuiInputLabel-shrink-22 MuiInputLabel-outlined-25"
          data-shrink="true"
          for="search"
        >
          Search
        </label>
        <div
          class="MuiInputBase-root-46 MuiOutlinedInput-root-33 MuiInputBase-fullWidth-55 MuiInputBase-formControl-47 MuiInputBase-adornedStart-50 MuiOutlinedInput-adornedStart-36 MuiInputBase-adornedEnd-51 MuiOutlinedInput-adornedEnd-37"
        >
          <fieldset
            aria-hidden="true"
            class="MuiPrivateNotchedOutline-root-63 MuiOutlinedInput-notchedOutline-40"
            style="padding-left: 8px;"
          >
            <legend
              class="MuiPrivateNotchedOutline-legend-64"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="MuiInputAdornment-root-65 MuiInputAdornment-positionStart-67"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-70"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input-56 MuiOutlinedInput-input-41 MuiInputBase-inputAdornedStart-61 MuiOutlinedInput-inputAdornedStart-44 MuiInputBase-inputAdornedEnd-62 MuiOutlinedInput-inputAdornedEnd-45"
            id="search"
            placeholder="A Tale of Two Cities"
            type="text"
            value="moby dick"
          />
        </div>
      </div>
      <div
        class="_Library-infiniteScroll-2"
      >
        <div>
          <ul
            class="MuiList-root-79 MuiList-dense-81 MuiList-padding-80"
          >
            <a
              class="_Library-entity-8"
              href="/read/1556915133442"
            >
              <div
                class="MuiButtonBase-root-140 MuiListItem-root-128 MuiListItem-default-131 MuiListItem-dense-132 MuiListItem-gutters-136 MuiListItem-button-137"
                role="button"
                tabindex="0"
              >
                <div
                  class="_Cover-root-191"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-70 _Cover-icon-192"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M18 4H6c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H6V6h12v12z"
                    />
                  </svg>
                </div>
                <div>
                  <h2
                    class="MuiTypography-root-155 MuiTypography-h2-168 _Library-entityName-4"
                  >
                    Moby Dick; Or, The Whale
                  </h2>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    Added today at 1:25 PM
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    1.23m words
                  </p>
                  <p
                    class="MuiTypography-root-155 MuiTypography-body1-164 _Library-entityInfo-5"
                  >
                    #tag-2
                  </p>
                </div>
                <span
                  class="MuiTouchRipple-root-193"
                />
              </div>
            </a>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
